Login / Logout / Account Creation and some customization

--- a/arquivos-apoio/index.html
+++ b/arquivos-apoio/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </nav>
-    
+        <%= JSON.stringfy(user) %> 
         <!--Intro Section-->
         <section class="view intro-2 hm-gradient">
             <div class="full-bg-img">
